# videoprof

./: .coveragerc  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  script.py
.github/workflows/: python.yml
tests/: attribute.py  config.py  level.py  preference.py  video.py  videoprof.py
videoprof/: __main__.py  attribute.py  config.py  db.py  default_config.json  exceptions.py  level.py  mediainfo.py  preference.py  progress.py  quality.py  video.py  videoprof.py
